# deepagent-amazon-bedrock-agentcore

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
agent/: main.py  settings.py
iac/: app.py  stack.py
scripts/: invoke.py
