[project]
name = "serverless-deep-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aws-cdk-aws-bedrock-agentcore-alpha>=2.232.1a0",
    "aws-cdk-lib>=2.232.1",
    "bedrock-agentcore>=1.1.1",
    "boto3>=1.42.4",
    "deepagents>=0.2.8",
    "langchain[aws]>=1.1.2",
    "langgraph-checkpoint-aws>=1.0.1",
    "pydantic-settings>=2.12.0",
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[dependency-groups]
dev = [
    "bedrock-agentcore-starter-toolkit>=0.2.2",
    "poethepoet>=0.38.0",
    "ruff>=0.14.8",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "UP",
    "B",
    "SIM",
    "I",
]

[tool.poe.tasks]
lint = "ruff check ."
format = "ruff format ."
build = "docker compose build"
start = "docker compose up -d"
restart = "docker compose up --build -d"
down = "docker compose down"
logs = "docker compose logs -f"
dev = "docker compose watch"
deploy = "cdk deploy --require-approval never"

[tool.poe.tasks.invoke]
script = "scripts.invoke:main"
envfile = ".env"
args = [
    { name = "session-id", options = ["--session-id"], required = true },
    { name = "user-id", options = ["--user-id"], required = true },
    { name = "input", options = ["--input"], required = true },
    { name = "agent-runtime-arn", options = ["--agent-runtime-arn"], required = true },
    { name = "region", options = ["--region"], default = "${AWS_REGION}" }
]
